...
                                    </button>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="bYd-4f-u2b">
                                        <rect key="frame" x="0.0" y="62" width="155" height="18"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fgf-Fa-kPU">
                                                <rect key="frame" x="0.0" y="0.0" width="45" height="18"/>
                                                <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="12"/>
                                                <state key="normal" title="сегодня">
                                                    <color key="titleColor" red="0.1647058824" green="0.29803921570000003" blue="0.46666666670000001" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizedTitle" value="сегодня"/>
                                                </userDefinedRuntimeAttributes>
...
